--- a/SGE/src/main/resources/velocity/login.html
+++ b/SGE/src/main/resources/velocity/login.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
 	<head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -6,20 +5,22 @@
 		<title>SGE</title>
 	</head>
 	<body>	
-		<div class="jumbotron">
-			<h2 class="text-center">Login $usuario</h2>
+		<div class="jumbotron bg-dark text-white">
+			<h2>Login $usuario</h2>
 			<form id="loginForm" method="post"> 
 				<div class="form-group">
 					<label for="username">Usuario:</label>
 					<div class="col-4">
-						<input type="text" name="username" class="form-control" placeholder="Usuario"/>
+						<input type="text" name="username" class="form-control" placeholder="Ingrese su usuario"/>
 					</div>
+				</div>
 				<div class="form-group>
 					<label for="pass">Password:</label>
 					<div class="col-4">
-						<input type="password" name="pass" class="form-control" placeholder="Password"/>
-					<div class="col-4">
+						<input type="password" name="pass" class="form-control" placeholder="Ingrese su password"/>
+					</div>
 				</div>
+				<br/>
 				<div class="button">
 					#if($usuario == "Clientes")
 						<button type="submit" class="btn btn-primary">Ingresar</button>
