--- a/SGE/src/main/resources/velocity/consumo_domicilios.html
+++ b/SGE/src/main/resources/velocity/consumo_domicilios.html
@@ -7,33 +7,9 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<!-- Inicio menu superior-->
-		<nav class="navbar navbar-inverse">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="/home">SGE</a>
-				</div>
-				<ul class="nav navbar-nav">
-					<li class="active"><a>Administradores</a></li>
-					<li><a href="/consumo/domicilios">Consumo de domicilios</a></li>
-					<li><a href="/dispositivo/alta">Alta dispositivo</a></li>
-					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Reportes<span class="caret"></span></a>
-						<ul class="dropdown-menu">
-						  <li><a href="#">Consumo por domicilio</a></li>
-						  <li><a href="#">Consumo promedio por tipo de dispositivo</a></li>
-						  <li><a href="#">Consumo por transformador</a></li>
-						</ul>
-					</li>
-					<li><a href="/mapa">Mapa</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/home"><span class="glyphicon glyphicon-log-out"></span> Salir</a></li>
-				</ul>
-			</div>
-		</nav>
-		<!-- Fin menu superior -->
-		
+        #parse("/velocity/navbar_admin.html")
+        #@navBarAdmin()
+        #end
 		<div class="container">
 			<h2>Consumo por domicilio</h2>
 			<table class="table">
