Avanzando con dispositivos

--- a/SGE/src/main/resources/velocity/navbar_cliente.html
+++ b/SGE/src/main/resources/velocity/navbar_cliente.html
@@ -7,7 +7,7 @@
 				</div>
 				<ul class="nav navbar-nav">
 					<li class="active"><a>Clientes</a></li>
-					<li><a href="/domicilio/estado">Estado domicilio principal</a></li>
+					<li><a href="/cliente/dispositivos">Dispositivos</a></li>
 					<li><a href="/consumo/periodo">Consumo consumo período</a></li>
 					<li><a href="/dispositivo/archivo">Carga archivo dispositivos</a></li>
 					<li><a href="/simplex">Ejecución de Simplex</a></li>
