--- a/SGE/src/main/resources/velocity/consumo_domicilios.html
+++ b/SGE/src/main/resources/velocity/consumo_domicilios.html
@@ -28,7 +28,7 @@
 				  </tr>
 				#end
 				</tbody>
-		  </table> <!-- Inicio tabla de consumo por domicilio-->
+		  </table> <!-- Fin tabla de consumo por domicilio-->
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
