--- a/SGE/src/main/resources/velocity/navbar_cliente.html
+++ b/SGE/src/main/resources/velocity/navbar_cliente.html
@@ -8,10 +8,9 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a>Clientes</a></li>
 					<li><a href="/cliente/dispositivos">Dispositivos</a></li>
-					<li><a href="/consumo/periodo">Consumo consumo período</a></li>
+					<li><a href="/consumo/periodo">Consumoperíodo</a></li>
 					<li><a href="/dispositivo/archivo">Carga archivo dispositivos</a></li>
-					<li><a href="/simplex">Ejecución de Simplex</a></li>
-					<li><a href="#">ABM Dispositivos</a></li>
+					<li><a href="/simplex">Simplex</a></li>
 					<li><a href="/mapa">Mapa</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
