--- a/SGE/src/main/resources/velocity/login.html
+++ b/SGE/src/main/resources/velocity/login.html
@@ -33,7 +33,7 @@
 				<br/>
 				#if($primerLogin == false)
 					#if($autenticacionExitosa == false)
-					<div class="alert alert-danger" role="alert">Error en el logueo. Por favor, vuelva a intentar.</div>
+					<div class="alert alert-danger" role="alert"><p>Error en el logueo. Por favor, vuelva a intentar.</p></div>
 					#end
 				#end
 			</div>
