--- a/SGE/src/main/resources/velocity/navbar_admin.html
+++ b/SGE/src/main/resources/velocity/navbar_admin.html
@@ -7,7 +7,7 @@
 				</div>
 				<ul class="nav navbar-nav">
 					<li class="active"><a>Administradores</a></li>
-					<li><a href="/consumo/domicilios">Consumo de domicilios</a></li>
+					<li><a href="/admin/domicilios">Consumo de domicilios</a></li>
 					<li><a href="/dispositivo/alta">Alta dispositivo</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Reportes<span class="caret"></span></a>
