Cargando un nuevo dispositivo (ADMIN)

--- a/SGE/src/main/resources/velocity/carga_archivo_dispositivos.html
+++ b/SGE/src/main/resources/velocity/carga_archivo_dispositivos.html
@@ -33,7 +33,7 @@
 			</form>
             <br>
             #if($botonCargaPresionado && $cargaExitosa)
-                <div class="alert alert-success" role="alert"><p>La carga del archivo de nuevos dispositivos ha sido exitosa.</p></div> 
+                <div class="alert alert-success" role="alert"><p>La carga del archivo de dispositivos ha sido exitosa.</p></div> 
                 <p>Puede comprobar el estado de los nuevos dispositivos pulsado la opción "Dispositivos" del menú superior</p>
             #end
 		</div>
