--- a/SGE/src/main/resources/velocity/alta_dispositivo.html
+++ b/SGE/src/main/resources/velocity/alta_dispositivo.html
@@ -7,52 +7,30 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<!-- Inicio menu superior-->
-		<nav class="navbar navbar-inverse">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="/home">SGE</a>
-				</div>
-				<ul class="nav navbar-nav">
-					<li class="active"><a>Administradores</a></li>
-					<li><a href="/consumo/domicilios">Consumo de domicilios</a></li>
-					<li><a href="/dispositivo/alta">Alta dispositivo</a></li>
-					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Reportes<span class="caret"></span></a>
-						<ul class="dropdown-menu">
-						  <li><a href="#">Consumo por domicilio</a></li>
-						  <li><a href="#">Consumo promedio por tipo de dispositivo</a></li>
-						  <li><a href="#">Consumo por transformador</a></li>
-						</ul>
-					</li>
-					<li><a href="/mapa">Mapa</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/home"><span class="glyphicon glyphicon-log-out"></span> Salir</a></li>
-				</ul>
-			</div>
-		</nav>
-		<!-- Fin menu superior -->
-		
+        <!-- Inicio menu superior-->
+        #parse("/velocity/navbar_admin.html")
+        #@navBarAdmin()
+        #end
+        <!-- Fin menu superior -->
 		<!-- Inicio contenido de la página -->
 		<div class="container">
 		  <h2>Alta de nuevo dispositivo</h2>
-			<form id="altaDispForm" method="post"> 
+			<form action="/dispositivo/alta" method="post" id="altaDispForm"> 
 				<div class="form-group">
 				  <label for="nombre">Nombre:</label>
-				  <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre del nuevo dispositivo" name="nombre">
+				  <input type="text" class="form-control" name="nombre" placeholder="Ingrese el nombre del nuevo dispositivo" name="nombre">
 				</div>
 				<div class="form-group">
-				  <label for="kwh">Consumo Kwh:</label>
-				  <input type="number" class="form-control" id="kwh" placeholder="Ingrese el consumo Kwh del dispositivo" name="kwh">
+				  <label for="kwh">Consumo kwh:</label>
+				  <input type="number" step="any" class="form-control" name="kwh" placeholder="Ingrese el consumo Kwh del dispositivo" name="kwh">
 				</div>
 				<div class="form-group">
 				  <label for="usomin">Uso mensual minimo en horas:</label>
-				  <input type="number" class="form-control" id="usomin" placeholder="Ingrese el uso mensual minimo en horas del dispositivo" name="usomin">
+				  <input type="number" class="form-control" name="usomin" placeholder="Ingrese el uso mensual minimo en horas del dispositivo" name="usomin">
 				</div>
 				<div class="form-group">
 				  <label for="usomax">Uso mensual maximo en horas:</label>
-				  <input type="number" class="form-control" id="usomax" placeholder="Ingrese el uso mensual maximo en horas del dispositivo" name="usomax">
+				  <input type="number" class="form-control" name="usomax" placeholder="Ingrese el uso mensual maximo en horas del dispositivo" name="usomax">
 				</div>
 				<div class="form-group">
 					<label for="bajoConsumo">Es bajo consumo:</label>
@@ -73,7 +51,7 @@
 						</label>
 				</div>
 				<br/>
-			<button type="submit" class="btn btn-default">Registrar</button>
+			<button type="submit" class="btn btn-default">Enviar</button>
 		  </form>
 		</div>
 		<!-- Fin contenido de la página -->
@@ -82,4 +60,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	</body>
+    <!-- Inicio Footer -->
+        #parse("/velocity/footer.html")
+        #@footerSGE()
+        #end
+    <!-- FIN Footer -->
 </html>
