--- a/SGE/src/main/resources/velocity/navbar_cliente.html
+++ b/SGE/src/main/resources/velocity/navbar_cliente.html
@@ -1,6 +1,6 @@
 #macro(navBarCliente)
 		<!-- Inicio menu superior-->
-		<nav class="navbar navbar-inverse">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="/index">SGE</a>
