--- a/SGE/src/main/resources/velocity/navbar_admin.html
+++ b/SGE/src/main/resources/velocity/navbar_admin.html
@@ -12,9 +12,8 @@
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Reportes<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-						  <li><a href="#">Consumo por domicilio</a></li>
-						  <li><a href="#">Consumo promedio por tipo de dispositivo</a></li>
-						  <li><a href="#">Consumo por transformador</a></li>
+						  <li><a href="/reporte/consumoTotalPorhogar">Consumo total por domicilio</a></li>
+						  <li><a href="#">Consumo promedio por transformador</a></li>
 						</ul>
 					</li>
 					<li><a href="/mapa">Mapa</a></li>
