Listado reglas activas funcionando

--- a/SGE/src/main/resources/velocity/dispositivos.html
+++ b/SGE/src/main/resources/velocity/dispositivos.html
@@ -46,24 +46,46 @@
                                     <td>$estado</td>
                                     #end
                                     <td>
-                                        #if($estado == "APAGADO" || $estado == "AHORRO_DE_ENERGIA")
+                                        #if($estado == "ENCENDIDO")
+                                         <div class="btn-group"   
                                             <form action="/dispositivo/encender" id="encender" method="post"> 
-                                                    <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary myclass">Encender</button>
+                                                    <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary myclass" disabled>Encender</button>
                                             </form>
-                                        #end
-                                    </td>
-                                    <td>
-                                        #if($estado == "ENCENDIDO" || $estado == "AHORRO_DE_ENERGIA")
                                             <form action="/dispositivo/apagar" id="apagar" method="post"> 
                                                     <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary">Apagar</button>
                                             </form>
-                                        #end
-                                    </td>   
-                                    <td>
-                                        #if($estado == "ENCENDIDO")
                                             <form action="/dispositivo/ahorro" id="ahorro" method="post"> 
                                                     <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary">Ahorro de energía</button>
+                                            </form>  
+                                        </div>
+                                    </td>
+                                    <td>
+                                        #elseif($estado == "APAGADO")
+                                        <div class="btn-group"
+                                            <form action="/dispositivo/encender" id="encender" method="post"> 
+                                                    <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary myclass">Encender</button>
                                             </form>
+                                            <form action="/dispositivo/apagar" id="apagar" method="post"> 
+                                                    <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary" disabled>Apagar</button>
+                                            </form>
+                                            <form action="/dispositivo/ahorro" id="ahorro" method="post"> 
+                                                    <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary" disabled>Ahorro de energía</button>
+                                            </form>   
+                                        </div>
+                                    </td>   
+                                    <td>
+                                        #else <!-- Esta en estado AHORRO_DE_ENERGIA -->
+                                        <div class="btn-group"
+                                            <form action="/dispositivo/encender" id="encender" method="post"> 
+                                                    <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary myclass">Encender</button>
+                                            </form>
+                                            <form action="/dispositivo/apagar" id="apagar" method="post"> 
+                                                    <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary">Apagar</button>
+                                            </form>
+                                            <form action="/dispositivo/ahorro" id="ahorro" method="post"> 
+                                                    <button type="submit" name="idDispositivo" value="$dispositivo.id()" class="btn btn-primary" disabled>Ahorro de energía</button>
+                                            </form>   
+                                        </div>
                                         #end
                                     </td>   
                                 </tr>
