--- a/SGE/src/main/resources/velocity/navbar_cliente.html
+++ b/SGE/src/main/resources/velocity/navbar_cliente.html
@@ -8,10 +8,10 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a>Clientes</a></li>
 					<li><a href="/cliente/dispositivos">Dispositivos</a></li>
-					<li><a href="/consumo/periodo">Consumoperíodo</a></li>
+                    <li><a href="/reglas">Reglas activas</a></li>
+					<li><a href="/consumo/periodo">Consumo de período</a></li>
 					<li><a href="/dispositivo/archivo">Carga archivo dispositivos</a></li>
 					<li><a href="/simplex">Simplex</a></li>
-					<li><a href="/mapa">Mapa</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/index"><span class="glyphicon glyphicon-log-out"></span> Salir</a></li>
