--- a/SGE/src/main/resources/velocity/zborrador.html
+++ b/SGE/src/main/resources/velocity/zborrador.html
@@ -7,17 +7,17 @@
 		<div class="jumbotron bg-dark text-white">		
 			<h1>Bienvenido a SGE</h1> 
 			<p>Ingresa como:</p> 
+            <div class="btn-group"
 			<a href="/login/cliente">
 				<button type="button" class="btn btn-primary">Cliente</button>
 			</a>
 			<a href="/login/admin">
 				<button type="button" class="btn btn-secondary">Administrador</button>
 			</a>
-            <br><br>
-            <p>Tambi&eacuten puede visualizar nuestro mapa p&uacuteblico:</p>
             <a href="/mapa">
 				<button type="button" class="btn btn-success">Visualizar mapa</button>
 			</a> 
+            </div>
 		</div> 
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
